# tsink

./: CHANGELOG.md  Cargo.toml  README.md
crates/tsink-server/: Cargo.toml  build.rs
crates/tsink-server/proto/prometheus/: remote.proto  types.proto
crates/tsink-server/src/: admission.rs  edge_sync.rs  exemplar_store.rs  handlers.rs  http.rs  legacy_ingest.rs  main.rs  managed_control_plane.rs  metadata_store.rs  otlp.rs  prom_remote.rs  prom_write.rs  rbac.rs  rules.rs  security.rs  server.rs  tenant.rs  usage.rs
crates/tsink-server/src/cluster/: audit.rs  config.rs  consensus.rs  control.rs  dedupe.rs  distributed_storage.rs  hotspot.rs  membership.rs  mod.rs  outbox.rs  planner.rs  query.rs  query_merge.rs  repair.rs  replication.rs  ring.rs  rpc.rs
crates/tsink-server/src/cluster/testdata/: internal-mtls-ca-cert.pem  internal-mtls-client-a-cert.pem  internal-mtls-client-a-key.pem  internal-mtls-client-b-cert.pem  internal-mtls-client-b-key.pem  internal-mtls-server-cert.pem  internal-mtls-server-key.pem
crates/tsink-server/src/handlers/: router.rs
crates/tsink-server/src/handlers/admin/: cluster.rs  control_plane.rs  mod.rs  rbac_security.rs  rules_rollups.rs  snapshot_restore.rs  usage_support.rs
crates/tsink-server/src/handlers/internal_api/: mod.rs
crates/tsink-server/src/handlers/metrics/: cluster.rs  mod.rs
crates/tsink-server/src/handlers/public_api/: ingest.rs  metadata.rs  mod.rs  promql.rs  remote_read.rs
crates/tsink-server/src/server/: auth.rs  transport.rs
crates/tsink-server/tests/fixtures/migration/: graphite-capture.json  (+8 more)
(+295 files in other folders)
